--- a/docs/aula00_ep_antigo.Rmd
+++ b/docs/aula00_ep_antigo.Rmd
@@ -33,83 +33,6 @@ div {
 }
 </style>
 
-# Formação &#127891;
-
-&#10004; Ensino básico
-
-<br>
-
-&#127979; EMEIF Álvares Machado
-
-<br>
-
---
-
-&#127979; EE Profa. Angélica de Oliveira
-
----
-
-&#10004; Bacharel em Estatística
-
-```{r , echo=FALSE, fig.align = 'center', out.width = '35%'}
-knitr::include_graphics('figuras/fct.jpg')
-```
-
-<br>
-
---
-
-&#10004; Mestrado e Doutorado em Ciências
-
-```{r , echo=FALSE, fig.align = 'center', out.width = '45%'}
-knitr::include_graphics('figuras/esalq.jpg')
-```
-
----
-
-# Universidades &#127979;
-
-&#10004; Unoeste
-
-```{r , echo=FALSE, fig.align = 'center', out.width = '25%'}
-knitr::include_graphics('figuras/logo_unoeste.jpg')
-```
-
-<br>
-
-&#10004; UEM
-
-```{r , echo=FALSE, fig.align = 'center', out.width = '25%'}
-knitr::include_graphics('figuras/logo_uem.jpg')
-```
-
-<br>
-
-&#10004; UTFPR
-
-```{r , echo=FALSE, fig.align = 'center', out.width = '25%'}
-knitr::include_graphics('figuras/utfpr.jpg')
-```
-
----
-
-# Apresentar-se
-
-- Nome
-
-<br>
-
-- Período
-
-<br>
-- Curso
-
-```{r , echo=FALSE, fig.align = 'right', out.width = '60%'}
-knitr::include_graphics('https://media.giphy.com/media/TKNGghpLhaz9XH1tSj/giphy.gif')
-```
-
----
-
 # Importância da Estatística para Engenharia de Produção &#129327;
 
 As Unidades Curriculares a seguir tem a **Estatística** com pré-requisito
@@ -163,9 +86,9 @@ Horário da Aula &#9200;
 Horário de Atendimento &#9200;
 ]
 .pull-right[
-- Segunda-feira das 10:20-11:10
+- Segunda-feira das 17:30-19:10
 
-- Terça-feira das 19:10-20:50
+- Terça-feira das 15:50-16:40
 ]
 
 ---
@@ -242,17 +165,33 @@ knitr::include_graphics('figuras/fig9.jpg')
 
 ---
 
+# Aulas &#128105;&#8205;&#127979;
+
+&#10004; **Prestar atenção** no que está sendo copiado e no que está sendo discutido.
+
+&#10004; **Questionar** quando tiver dúvidas.
+
+```{r , echo=FALSE, fig.align = 'right', out.width = '60%'}
+knitr::include_graphics('https://media.giphy.com/media/STThOmSL9X8jpaEqfE/giphy.gif')
+```
+
+---
+
 # Lista de exercícios &#9997;
 
 Haverá listas de exercícios para serem resolvidas em casa. Resolver os problemas da lista de exercícios é uma forma de aprendizagem, pois é uma maneira de colocar em prática tudo que você leu e ouviu, e vai lhe fornecer um *feedback* sobre o que foi abordado em sala de aula.
 
-```{r , echo=FALSE, fig.align = 'center', out.width = '30%'}
-knitr::include_graphics('https://media.giphy.com/media/1oBwBVLGoLteCP2kyD/giphy.gif')
+```{r , echo=FALSE, fig.align = 'center', out.width = '55%'}
+knitr::include_graphics('figuras/fig10.jpg')
 ```
 
+<br>
+
+--
 
 &#10004; Vocês são **encorajados** a resolver problemas com os outros estudantes, compartilhar e discutir ideias.
 
+--
 
 &#10004; As respostas de cada problema devem ser **resultados de seu próprio esforço**.
 
@@ -262,9 +201,11 @@ knitr::include_graphics('https://media.giphy.com/media/1oBwBVLGoLteCP2kyD/giphy.
 
 .pull-left[
 
-&#10004; Elaboração de notas de aula.
+&#10004; Construção de tabelas e gráficos de distribuição de frequência.
 
-&#10004; Atividades extraclasse.
+&#10004; Outras distribuições de probabilidade contínuas. 
+
+&#10004; Teste de hipótese para proporção. 
 ]
 .pull-right[
 
@@ -276,6 +217,157 @@ knitr::include_graphics('https://media.giphy.com/media/1oBwBVLGoLteCP2kyD/giphy.
 knitr::include_graphics('https://media.giphy.com/media/xTiQywlOn0gKyz0l56/giphy.gif')
 ```
 
+---
+
+# Provas &#128221;
+
+Haverá três avaliações que vão cobrir o conteúdo abordado em sala de aula, as listas de exercícios e as bibliografias citadas. As soluções de cada uma das provas devem estar bem **organizadas** e **justificadas**. Desta forma, você irá demonstrar sua capacidade de comunicar os seus resultados. Se a prova estiver **difícil de compreender** devido a organização e passagens não justificadas, haverá **penalidades**.
+
+Qualquer conflito com as datas das provas devem ser comunicados na **segunda semana de aula**.
+
+<br>
+
+.pull-left[
+<center>Prova 1</center>
+
+Segunda-feira, **11/11/2024**
+]
+.pull-right[
+<center>Prova 2</center>
+
+Terça-feira, **17/12/2024**
+]
+
+---
+
+# Prova de segunda chamada 
+
+No caso do aluno perder, **por motivo de doença ou força maior**, alguma avaliação, poderá solicitar, através de requerimento, uma única segunda chamada por avaliação, desde que no prazo determinado no Regulamento da Organização Didático-Pedagógica dos Cursos da UTFPR (Art.36 - Graduação e Art.31 - Técnico)
+
+<br>
+
+.pull-left[
+<center>Prova de Segunda Chamada</center>
+
+Terça-feira, **25/02/2025**
+]
+.pull-right[
+
+]
+
+<br>
+
+Trabalho ou viagem a passeio **não são motivos** para segunda chamada.
+
+---
+
+# Trabalho &#128214;
+
+- Resumo expandido escrito por um grupo de no **máximo** três alunos;
+
+<br>
+
+- Selecionar um tema;
+
+- Elaborar hipóteses a serem testadas;
+
+- Fazer uma amostragem dos dados;
+
+- Analisar e apresentar os resultados.
+
+---
+
+# Critério de avaliação &#128220;
+
+Resolução 122/10-COEPP/Artigo 4:
+
+&#10004; Será aprovado o aluno que obtiver média final maior ou igual a 6 $(MF\geq6)$, em que
+		$$MF=0,2P1+0,5P2+0,3T,$$
+em que $Pi (i=1,2)$ é a $i$-ésima avaliação e $T$ é um trabalho. 
+<br>
+
+--
+
+&#128680; O aluno com presença entre **25% à 50%**, será aprovado se $MF\geq8$.
+
+<br>
+
+--
+
+&#10004; Para $MF$ poderá ser acrescentado um bônus por engajamento de no **máximo** 0,5 pontos a depender da decisão da turma.
+
+---
+
+&#10004; O aluno com $MF<6$ deverá fazer a prova de recuperação (**matéria toda** e **sem consulta**) no dia 24-02-2025. A média final será recalculada por 
+$$MFr=\frac{MF+R}{2},$$ 
+em que $R$ é a nota da prova de recuperação. Então, a nota final será determinada pela expressão
+
+$$NF=\min(6,MPr).$$
+Será aprovado o aluno com $NF\geq6$.
+
+<br>
+
+--
+
+&#128680; **Aviso**
+
+Bônus e pontos extras não serão considerados para o cálculo da média da prova de recuperação.
+
+---
+
+# Cópia de provas (e/ou *internet*) e falsidade
+
+```{r , echo=FALSE, fig.align = 'center', out.width = '40%'}
+knitr::include_graphics('https://media.giphy.com/media/SRqTQmbYdm5jgS7xH9/giphy.gif
+')
+```
+
+A desonestidade em nosso trabalho acadêmico representa uma **grave violação ética**.
+
+<br>
+
+Para maiores detalhes, consulte o **regulamento disciplinar do corpo discente da UTFPR**
+
+<https://portal.utfpr.edu.br/documentos/graduacao-e-educacao-profissional/prograd/diretrizes-e-regulamentos/gestao/regulamento-disciplinar-do-corpo-discente/view>
+
+---
+
+```{r , echo=FALSE, fig.align = 'center', out.width = '50%'}
+knitr::include_graphics('https://media.giphy.com/media/3o7TKwmnDgQb5jemjK/giphy.gif')
+```
+
+
+- Não utilizar o celular durante a aula, a menos que seja pedido;
+
+<br>
+
+--
+
+- Não dormir em aula;
+
+<br>
+
+--
+
+- Não há a necessidade de utilizar o *notebook*;
+
+<br>
+
+--
+
+- Faltas não serão removidas, a não ser que seja um erro de digitação ou participação em eventos.
+
+---
+
+# Preparação e maturidade
+
+&#128680; Incluído o pré-requisito de Matemática da variação.
+
+<br>
+
+```{r , echo=FALSE, fig.align = 'center', out.width = '40%'}
+knitr::include_graphics('https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExdXpidGpnZTF5bXRyb3N0Y2d2emV0c213NWFhcHR6anB4aW90emloeiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3orifd9FwNUCc0Ecxi/giphy.gif')
+```
 
 ---
 
@@ -289,7 +381,7 @@ knitr::include_graphics('https://media.giphy.com/media/xTiQywlOn0gKyz0l56/giphy.
 
 <br>
 
-&#10004; Disciplina: 2025 - S2 - Probabilidade e Estatística
+&#10004; Disciplina: 2024 - S2 - Probabilidade e Estatística
 
 <br>
 
